function(liepp_add_test TEST_NAME TEST_SOURCE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_link_libraries(${TEST_NAME}
        PRIVATE
        liepp::liepp
        Catch2::Catch2WithMain
    )
    target_compile_options(${TEST_NAME} PRIVATE ${LIEPP_WARNING_FLAGS})
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endfunction()

liepp_add_test(types_test types_test.cpp)
liepp_add_test(hat_vee_test hat_vee_test.cpp)
liepp_add_test(so2_test so2_test.cpp)
liepp_add_test(se2_test se2_test.cpp)
liepp_add_test(so3_test so3_test.cpp)
liepp_add_test(se3_test se3_test.cpp)
liepp_add_test(se3_left_jacobian_test se3_left_jacobian_test.cpp)
liepp_add_test(analytical_gradient_test analytical_gradient_test.cpp)
liepp_add_test(quaternion_utils_test quaternion_utils_test.cpp)
liepp_add_test(twist_test twist_test.cpp)
liepp_add_test(rotation_test rotation_test.cpp)
liepp_add_test(transform_test transform_test.cpp)
liepp_add_test(framed_twist_test framed_twist_test.cpp)
liepp_add_test(framed_wrench_test framed_wrench_test.cpp)
liepp_add_test(screw_axis_test screw_axis_test.cpp)
liepp_add_test(kinematic_chain_test kinematic_chain_test.cpp)
liepp_add_test(forward_kinematics_test forward_kinematics_test.cpp)
liepp_add_test(jacobian_compile_test jacobian_compile_test.cpp)
liepp_add_test(jacobian_test jacobian_test.cpp)
liepp_add_test(velocity_test velocity_test.cpp)
liepp_add_test(ik_compile_test ik_compile_test.cpp)
liepp_add_test(dls_solve_policy_test dls_solve_policy_test.cpp)
liepp_add_test(lm_solve_policy_test lm_solve_policy_test.cpp)
liepp_add_test(projected_lm_solve_policy_test projected_lm_solve_policy_test.cpp)
liepp_add_test(basic_ik_solver_compile_test basic_ik_solver_compile_test.cpp)
liepp_add_test(basic_ik_solver_test basic_ik_solver_test.cpp)
liepp_add_test(bobyqa_solve_policy_test bobyqa_solve_policy_test.cpp)
liepp_add_test(slsqp_solve_policy_test slsqp_solve_policy_test.cpp)
liepp_add_test(lbfgsb_solve_policy_test lbfgsb_solve_policy_test.cpp)
liepp_add_test(restart_solve_policy_test restart_solve_policy_test.cpp)
liepp_add_test(newton_raphson_solve_policy_test newton_raphson_solve_policy_test.cpp)
liepp_add_test(default_solvers_test default_solvers_test.cpp)

liepp_add_test(variadic_solver_test variadic_solver_test.cpp)
liepp_add_test(solver_factory_test solver_factory_test.cpp)
liepp_add_test(ik_integration_test ik_integration_test.cpp)
liepp_add_test(halton_seed_generator_test halton_seed_generator_test.cpp)

liepp_add_test(fk_sweep_test fk_sweep_test.cpp)
liepp_add_test(jacobian_sweep_test jacobian_sweep_test.cpp)
liepp_add_test(ik_sweep_test ik_sweep_test.cpp)

if(LIEPP_BUILD_NLOPT)
    target_link_libraries(bobyqa_solve_policy_test PRIVATE liepp::nlopt)
    target_link_libraries(slsqp_solve_policy_test PRIVATE liepp::nlopt)
endif()

if(EXISTS "${CMAKE_SOURCE_DIR}/benchmarks/trac_ik_lib/CMakeLists.txt")
    liepp_add_test(kdl_fk_comparison_test kdl_fk_comparison_test.cpp)
    target_include_directories(kdl_fk_comparison_test PRIVATE "${CMAKE_SOURCE_DIR}/benchmarks")
    target_link_libraries(kdl_fk_comparison_test PRIVATE orocos-kdl)
endif()
